# SkyDrop

./: .gitattributes  .gitignore  README.md
skydrop/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  Readme.md
skydrop/doc/hw/: Revisions.txt
skydrop/doc/manual/: Makefile  Manual-of-SkyDrop.html  Manual-of-SkyDrop.md  SkyDrop_user_manual_en.md
skydrop/doc/pan1026/PAN1026_ATmega128_V1.0/: PAN1026_ATmega128_V1.0.atsln  PAN1026_ATmega128_V1.0.atsuo
skydrop/src/: CMakeLists.txt  build_number.h  common.cc  common.cpp  common.h  debug.cpp  debug.h  debug_off.h  debug_on.h  ee.cpp  ee.h  skydrop.cc  skydrop.cpp  skydrop.h
skydrop/src/data/: MOEHRING.WPT  X-ALPS.WPT  font_6px_normal_ttf_8.h  font_arial_bold_ttf_10.h  font_arial_bold_ttf_16.h  font_arial_bold_ttf_36.h  font_arial_ttf_10.h  font_arial_ttf_12.h  fonts.cc  fonts.cpp  fonts.h
skydrop/src/drivers/: battery.cc  battery.cpp  battery.h  buttons.cc  buttons.cpp  buttons.h  buzzer.cc  buzzer.cpp  buzzer.h  lcd_disp.cpp  lcd_disp.h  led.cpp  led.h  n5110_disp.cc  n5110_disp.cpp  n5110_disp.h  time.cc  time.cpp  time.h  uart.cc  uart.cpp  uart.h
skydrop/src/drivers/audio/: audio.cpp  audio.h  buzzer.cpp  sequencer.cpp  sequencer.h  vario.cpp  vario.h
skydrop/src/drivers/bluetooth/: bt.cc  bt.cpp  bt.h  pan1026.cc  pan1026.cpp  pan1026.h  pan1322.cc  pan1322.cpp  pan1322.h  pan_lite.cc  pan_lite.h
skydrop/src/drivers/sensors/: devices.cc  devices.cpp  devices.h  gps_l80.cc  gps_l80.cpp  gps_l80.h  l3gd20.cc  l3gd20.cpp  l3gd20.h  lsm303d.cc  lsm303d.cpp  lsm303d.h  ms5611.cc  ms5611.cpp  ms5611.h  sht21.cc  sht21.cpp  sht21.h
skydrop/src/drivers/storage/: cfg.cc  cfg.h  storage.cc  storage.cpp  storage.h
skydrop/src/fc/: CMakeLists.txt  acc.cpp  acc.h  agl.cpp  agl.h  airspace.cpp  airspace.h  alt_calibration.cpp  alt_calibration.h  audio.cc  audio.cpp  audio.h  circling.cpp  circling.h  compass.cpp  compass.h  conf.cc  conf.cpp  conf.h  fake_data.h  fc.cc  fc.cpp  fc.h  gyro.cpp  gyro.h  imu.cpp  imu.h  kalman.cc  kalman.cpp  kalman.h  kalman.h.bak  kalman2.cc  kalman2.h  kalman_old.cpp  kalman_old.h  mag.cpp  mag.h  navigation.cpp  navigation.h  odometer.cpp  (+8 more)
skydrop/src/fc/logger/: aero.cpp  aero.h  igc.cpp  igc.h  kml.cpp  kml.h  logger.cpp  logger.h  private_key.h  raw.cpp  raw.h  sha256.cpp  sha256.h
skydrop/src/fc/protocols/: LK8EX1.cpp  LK8EX1.h  bluefly.cpp  bluefly.h  digifly.cpp  digifly.h  flynet.cpp  flynet.h  generic.cpp  generic.h  protocol.cpp  protocol.h  skybean.cpp  skybean.h
skydrop/src/gui/: CMakeLists.txt  factory_test.cc  factory_test.cpp  gui.cc  gui.cpp  gui.h  gui_accel_calib.cpp  gui_accel_calib.h  gui_airspace.cpp  gui_airspace.h  gui_alarm.cpp  gui_alarm.h  gui_dialog.cpp  gui_dialog.h  gui_filemanager.cpp  gui_filemanager.h  gui_list.cc  gui_list.cpp  gui_list.h  gui_mag_calib.cpp  gui_mag_calib.h  gui_storage.cpp  gui_storage.h  gui_text.cpp  gui_text.h  gui_value.cc  gui_value.cpp  gui_value.h  pages.cc  pages.cpp  pages.h  settings.cc  settings.h  splash.cc  splash.cpp  splash.h  update.cpp  update.h  usb.cc  usb.cpp  (+1 more)
skydrop/src/gui/settings/: gui_accel_calib.cpp  gui_accel_calib.h  gui_compass_calib.cpp  gui_compass_calib.h  gui_filemanager.cpp  gui_filemanager.h  gui_flightdetail.cpp  gui_flightdetail.h  gui_flightlog.cpp  gui_flightlog.h  gui_flightlog1.cpp  gui_flightlog1.h  gui_flightlog2.cpp  gui_flightlog2.h  gui_flightlog3.cpp  gui_flightlog3.h  gui_gyro_calib.cpp  gui_gyro_calib.h  gui_home.cpp  (+86 more)
skydrop/src/tasks/: task_active.cc  task_active.cpp  task_active.h  task_powerdown.cc  task_powerdown.cpp  task_powerdown.h  task_update.cpp  tasks.cc  tasks.cpp  tasks.h
skydrop/src/xlib/: common.c  common.h  oofix.cpp  oofix.h  pgmhack.h  ring.cpp  ring.h  stream.cc  stream.cpp  stream.h
skydrop/utils/: .gitignore  BAT-CAL.RAW  battery.ods  calc.ods  inc_build_number.py  mag_data.csv  pan1026_uart_baud_calc.ods  sens_calib.ods  small-battery.txt
skydrop/utils/3836_extract/: dump_data.py
skydrop/utils/airspace/: .gitignore  Airspace.py  AirspaceVector.py  DataGeneration.md  LZBB140529.txt  README.md  agl.py  agl_tiles.list  airspaces_data.py  const.py  convert.py  create_lists.sh  create_lookup.py  create_zip.py  gps_calc.py  openaip.py  remove_water_tiles.py  run.py  run.sh  spoof.py  status.py  visualize-AIR.py  visualize-AIR2.py  visualize-AIR3.py  visualize-all.sh  visualize.py
skydrop/utils/avr-toolchain/: build.sh
skydrop/utils/calib/: acc_calib.ipynb  acc_data.csv  bat-cal-to-csv.py  battery.ods  mag_calib.ipynb  mag_data1.csv  ms2811_calc.ods  sens_calib.ods
skydrop/utils/circle/: Untitled.ipynb
skydrop/utils/debug/: bt_dbg.new  igc_check.py  test.py  tim.csv
skydrop/utils/distance/: Untitled.ipynb  Untitled1.ipynb  debug_skydrop_opti.ipynb  distance.ipynb  shortest dist.ipynb
skydrop/utils/ee_maper/: CParser.py  maper.py
skydrop/utils/etc/: TEST.CSV  reverse.csv  test.py
skydrop/utils/filter_tune/: Filter visualistaion.ipynb  Untitled1.ipynb  data.csv  data_acc.csv  data_acc2.csv  data_acc3.csv  data_acc4.csv  data_acc5.csv  data_acc6.csv  data_acc7.csv  data_acc8.csv  data_acc9.csv  filt.ipynb  filter tune offline.ipynb  imu visualisation.ipynb  vis.ipynb
skydrop/utils/gps_spoof/: .project  gui.py  route.cup
skydrop/utils/hex2bin/: intelhex.py  main.py  mk_img.sh  pack.py
skydrop/utils/homes/: backnang  grabenst  nabern  pattonvi
skydrop/utils/img/: LOGO  conv.py  convert-LOGO-to-ascii.py  convert-LOGO-to-image.py  convert-LOGO-to-png.py  convert-image-to-LOGO.py
skydrop/utils/mem/: analyse.py  flash_usage.txt  flash_usage_nokey.txt  get_usage.py  ram_usage.txt
skydrop/utils/raw_parser/: in.RAW  in.raw  out.csv  raw_parser.py
skydrop/utils/rec_conv/: .gitignore  conv.py
skydrop/utils/serial_chart/: 3D.py  chart.py  chart_3D.py  chart_Quat.py
skydrop/utils/ttf2bin/: README  convert.py  font_arial_bold_ttf_10.h  font_arial_bold_ttf_16.h  font_arial_bold_ttf_36.h  font_arial_ttf_10.h  font_arial_ttf_12.h  font_thin_pixel_7_ttf_20.h  visualize.py
skydrop/utils/upload/: batch.sh  boot.sh  fix_fuse.sh  upl.sh
(+923 files in other folders)
